[tool.poetry]
name = "gpt"
version = "0.1.0"
description = ""
authors = ["Richard Löwenström <samedii@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1,<3.11"
requests = "^2.31.0"
openai = "^0.27.9"
langchain = "^0.0.276"
pydantic = "^2.3.0"
typer = "^0.9.0"
tiktoken = "^0.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ge = 'gpt.main:app'
